welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: not found: value faireBiag
  faireBiag(Color.BLUE)
  ^PatternPicture:18: error: not found: value faireBiag
  faireBiag(Color.YELLOW)
  ^