welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  for (j<-1 to 2){
  	for (i<-1 to 2){
    	faireMotif()
  	}
    gauche()
    avance(4)
    droite()
  }
}

def faireMotif(){
  droite()
  recule(2)
  faireDiag(Color.RED)
  faireBiag(Color.BLUE)
  faireDiag(Color.GREEN)
  faireBiag(Color.YELLOW)
  gauche()
  avance(2)
  gauche()
  avance(3)
}

def faireDiag(c:Color){
  avance()
  marquer(c)
  avance()
  gauche()
  avance()
  marquer(c)
}


def marquer(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}